style: Sonarlint cleanup